# arrow-integer-unpacking-blog

./: .gitignore  CMakeLists.txt  README.md  blog.ipynb  environment.yml  pixi.toml  results.ipynb
.nblink/: environment.yml  jupyter-lite.json  nblink-lock.json
arrow/testing/: util.cc
arrow/util/: bpacking_benchmark.cc  bpacking_littleintpacker_sse42.cc  bpacking_scalar_exact.cc  bpacking_scalar_generated_internal.h  bpacking_scalar_internal.h  bpacking_simd128_generated_internal.h  bpacking_simd256_generated_internal.h  bpacking_simd512_generated_internal.h  bpacking_simd_avx2_exact.cc  bpacking_simd_avx2_no_dispatch.cc  bpacking_simd_avx2_old.cc  bpacking_simd_avx2_scalar_batch.cc  bpacking_simd_avx512_exact.cc  bpacking_simd_avx512_scalar_batch.cc  bpacking_simd_default.cc  bpacking_simd_default_exact.cc  bpacking_simd_default_no_dispatch.cc  bpacking_simd_default_old.cc  bpacking_simd_default_scalar_batch.cc  bpacking_simd_internal.h  bpacking_simd_kernel_internal.h  bpacking_test.cc  cpu_info.cc  logging.h
blog/: all.hpp  bpacking-cpp.ipynb  components.hpp  ui.hpp  unpacking.hpp  utils.hpp
blog/include/: all.hpp  config.hpp
data/: benchmark-linux-64.parquet  benchmark-osx-arm64.parquet  cpuinfo-linux-64.txt  sysctl-osx-arm64.txt
results_dashboard/: dashboard.py  plot.py  preprocessing.py  widgets.py
